changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Preliminary rule edition ("match" only for now). Rule file saving support.
Nicolas Weeger 2010-05-22

Downcast type, remove const, which apparently cause issues.
Nicolas Weeger 2010-05-21

Update help text for filters.
Nicolas Weeger 2010-05-21

Don't display an empty menu on right click.
Nicolas Weeger 2010-05-19

Add Race to the set of things that can be filtered on in CRE
Brendan Lally 2010-05-19

Implement requestinfo for race_info and class_info.  Note there is a bug with
the archetypes in that many archetypes have type==37 (CLASS) which are not
actually class descriptors.
socket/request.c: New functions to send class/race information.
doc/Developers/protocol: Update document for format of race/class_info
  requestinfo.
MSW 2010-05-18

Improve quest edition, now can add or remove steps. Can add new quests.
Nicolas Weeger 2010-05-16

Indicate quest end steps. Enable edition of the 'can restart?' flag.
Nicolas Weeger 2010-05-16

Remove unused class.
Nicolas Weeger 2010-05-16

Fix crash if wanting to start an unknown quest.
Nicolas Weeger 2010-05-16

Highlight rules when the same token.
Nicolas Weeger 2010-05-15

Preliminary message file (.msg) support. No edition yet.
Nicolas Weeger 2010-05-15

Update the tree if the quest code changes. Enables quest step edition.
Nicolas Weeger 2010-05-15

Quest edition, not complete but some fields already.
Nicolas Weeger 2010-05-15

Show existing quests, and their various steps.
Nicolas Weeger 2010-05-15

Fix typedef definition issue when building CRE.
Nicolas Weeger 2010-05-15

Make various pointers const.
Nicolas Weeger 2010-05-15
