@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Extract widget, enable 'message' edition.
+Nicolas Weeger 2010-05-22
+
 Preliminary rule edition ("match" only for now). Rule file saving support.
 Nicolas Weeger 2010-05-22
 
